# swarm_robot_ros_sim

./: LICENSE.md  README.md
robot_specs/: CMakeLists.txt  README.md  package.xml  two_wheel_robot.launch
swarm_robot_controller/: CMakeLists.txt  README.md  package.xml
swarm_robot_controller/include/swarm_robot_controller/: two_wheel_pos_action_server.h
swarm_robot_controller/launch/: pos_publisher.launch  two_wheel_robot_controller.launch
swarm_robot_controller/src/: example_wheel_pos_cmd_publisher.cpp  example_wheel_traj_interpolator_ac.cpp  swarm_robot_pos_publisher.cpp  two_wheel_pos_minimal_controller.cpp  two_wheel_pos_publisher.cpp  two_wheel_robot_wheel_vel_controller.cpp  two_wheel_traj_interpolator_as.cpp
swarm_robot_controller/src/obsoleted/: example_wheel_pos_cmd_publisher.cpp  example_wheel_traj_interpolator_ac.cpp  swarm_robot_pos_publisher.cpp  two_wheel_kpkv_service_client.cpp  two_wheel_pos_minimal_controller.cpp
swarm_robot_description/: CMakeLists.txt  README.md  package.xml  swarm_positions.py  two_wheel_robot.launch  two_wheel_robot.urdf  unit_enclosure.urdf
swarm_robot_description/launch/: gazebo&parameter.launch  initialize.launch  test.launch  two_wheel_robot.launch
swarm_robot_description/sketchup/: twowheel_body.dae  twowheel_left.dae  twowheel_left.skp  twowheel_right.dae  twowheel_right.skp
swarm_robot_description/src/: swarm_spawner_gazebo_client.cpp  two_wheel_robot_batch_add.cpp  two_wheel_robot_line_distribution.cpp  two_wheel_robot_manager.cpp
swarm_robot_description/urdf/: enclosure_halfside_1.0.urdf  enclosure_halfside_3.0.urdf  enclosure_halfside_5.0.urdf  enclosure_halfside_customization.urdf  enclosure_side_10.0.urdf  enclosure_side_2.0.urdf  enclosure_side_customization.urdf  enclosures_w_door.urdf  maze_0.urdf  two_DOF_robot.urdf  two_wheel_robot.urdf  unit_enclosures_c_door.urdf
swarm_robot_description/urdf/mesh/: AutoSave_twowheel_left_mark.skp  twowheel_body.dae  twowheel_body.skb  twowheel_body.skp  twowheel_left_ld.dae  twowheel_left_ld.skp  twowheel_left_mark.dae  twowheel_left_mark.skb  twowheel_left_mark.skp  twowheel_right_ld.dae  twowheel_right_ld.skp
swarm_robot_description/worlds/: empty.world
swarm_robot_messages/: CMakeLists.txt  README.md  package.xml
swarm_robot_messages/msg/: swarm_robot_pos_publish.msg
swarm_robot_msgs/: README.md
swarm_robot_msgs/swarm_robot_action/: CMakeLists.txt  README.md  package.xml
swarm_robot_msgs/swarm_robot_action/action/: swarm_robot_traj.action
swarm_robot_msgs/swarm_robot_action/action/obsoleted/: swarm_robot_traj.action
swarm_robot_msgs/swarm_robot_msg/: CMakeLists.txt  README.md  package.xml
swarm_robot_msgs/swarm_robot_msg/msg/: two_wheel_robot.msg  two_wheel_robot_wheel_vel_cmd.msg
swarm_robot_msgs/swarm_robot_msg/msg/obsoleted/: two_wheel_robot_wheel_vel_cmd.msg
swarm_robot_msgs/swarm_robot_msgs/: CMakeLists.txt  README.md  package.xml
swarm_robot_msgs/swarm_robot_msgs/msg/: swarm_robot_poses.msg  two_wheel_poses.msg  two_wheel_robot.msg
swarm_robot_msgs/swarm_robot_msgs/msg/obsoleted/: swarm_robot_poses.msg
swarm_robot_msgs/swarm_robot_srv/: CMakeLists.txt  README.md  package.xml
swarm_robot_msgs/swarm_robot_srv/srv/: kpkv_msg.srv  kpkv_msg.srv~  swarm_robot_update.srv  two_wheel_robot_update.srv
swarm_robot_sim/: CMakeLists.txt  README.md  inchbot.world  inchbot_w_wheels.urdf  minimal_inchbot_w_wheels.urdf  package.xml
swarm_robot_simulation/: CMakeLists.txt  README.md  package.xml
swarm_robot_simulation/launch/: two_wheel_robot_dispersion.launch
swarm_robot_simulation/src/: dispersion.cpp  minimum_covering_circle.m  two_wheel_dispersion.cpp  two_wheel_line_formation.cpp  two_wheel_robot_aggregation.cpp  two_wheel_robot_dispersion.cpp  two_wheel_robot_line_formation.cpp
swarm_robot_simulation/src/obsoleted/: two_wheel_dispersion.cpp
swarm_robot_simulator/: CMakeLists.txt  README.md  package.xml
swarm_robot_specs/: CMakeLists.txt  README.md  initialize.world  package.xml  two_wheel_robot.launch
